cabal-version: 2.4
name:          urakka
version:       0.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
    Urakka
    Urakka.Concurrent
    Urakka.Serial

  other-modules:
    Urakka.Free
    Urakka.Ref

  build-depends:
    , async          ^>=2.2.2
    , base           >=4.11    && <4.13
    , containers     ^>=0.5.11 || ^>=0.6.0.1
    , deepseq        ^>=1.4.3.0
    , selective      ^>=0.3
    , stm            ^>=2.4.5.1 || ^>=2.5.0.0
    , unliftio-core  ^>=0.1.2.0

test-suite example
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  ghc-options:      -threaded -with-rtsopts=-N2
  main-is:          Example.hs
  build-depends:
    , base
    , clock        ^>=0.8
    , tasty        ^>=1.2.3
    , tasty-hunit  ^>=0.10.0.2
    , urakka
